--- a/package.json
+++ b/package.json
@@ -28,14 +28,20 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "express": "^4.17.2",
     "express-jwt": "^7.7.5",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
+    "lucide-react": "^0.462.0",
     "sqlite3": "^5.1.6",
-    "superagent": "^8.1.2"
+    "superagent": "^8.1.2",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@devacademy/eslint-config": "^1.10.1",
@@ -46,6 +52,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/express": "^4.17.14",
+    "@types/node": "^22.10.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/superagent": "^8.1.1",
