--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@radix-ui/react-slot": "^1.1.0",
+    "@storybook/react": "^8.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "express": "^4.17.2",
