--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
     "lucide-react": "^0.462.0",
+    "multer": "^1.4.5-lts.1",
     "react-day-picker": "^9.4.0",
     "sqlite3": "^5.1.6",
     "storybook": "^8.4.5",
@@ -72,6 +73,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
