--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
     "lucide-react": "^0.462.0",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "react-day-picker": "^9.4.0",
     "sqlite3": "^5.1.6",
