--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "knex": "^2.5.1",
     "lucide-react": "^0.462.0",
     "multer": "^1.4.5-lts.1",
+    "react-datepicker": "^7.5.0",
     "react-day-picker": "^9.4.0",
     "sqlite3": "^5.1.6",
     "storybook": "^8.4.5",
