--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "paths": {
       "@/*": ["./client/*"]
     },
-     "jsx": "react-jsx"
+     "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "allowJs": true,
   }
 }
 
