--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "knex": "^2.5.1",
     "lucide-react": "^0.462.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "multer": "^1.4.5-lts.1",
     "nock": "^13.5.6",
     "react-datepicker": "^7.5.0",
