--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,5 +14,5 @@
     "allowJs": true,
     "skipLibCheck": true
   },
-  "include": ["server/**/*", "client/**/*"]
+  "include": ["server/**/*", "client/**/*", "cron/emailService.ts"]
 }
