--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.0",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/superagent": "^8.1.1",
