--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^2.1.5",
+
     "knex": "^2.5.1",
     "lucide-react": "^0.462.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
+    "react-datepicker": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "nock": "^13.5.6",
     "node-cron": "^3.0.3",
