--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
+    "logger": "^0.0.1",
     "lucide-react": "^0.462.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
@@ -56,6 +57,7 @@
     "nock": "^13.5.6",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
+    "react-datepicker": "^7.5.0",
     "react-day-picker": "^9.4.0",
     "sqlite3": "^5.1.6",
     "storybook": "^8.4.5",
